[package]
name = "quasi"
version = "0.1.0"
authors = ["chesedo <pieter@chesedo.me>"]
edition = "2018"
description = "Runtime TokenStream interpolation for Rust macros"
repository = "https://github.com/chesedo/quasi"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
pretty_assertions = "0.6"