[package]
name = "tokenstream2-tmpl"
version = "0.1.1"
authors = ["chesedo <pieter@chesedo.me>"]
edition = "2018"
description = "Runtime TokenStream interpolation for Rust macros"
repository = "https://github.com/chesedo/tokenstream2-tmpl"
license = "MIT"
keywords = ["tokenstream", "interpolation", "macro"]
categories = ["development-tools::procedural-macro-helpers"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = "2.0"
proc-macro2 = "1.0"

[dev-dependencies]
pretty_assertions = "1.0"
